fix pom file to run mvn clean install command